@@ -1,5 +1,5 @@
 [tox]
-envlist = py36, py37, py38, pypy3, coverage, pep8
+envlist = py36, py37, py38, py39, pypy3, coverage, pre-commit
 skipsdist = True
 skip_missing_interpreters = True
 
@@ -9,17 +9,26 @@ extras = test
 
 commands = pytest {posargs}
 
-[testenv:pep8]
-basepython = python3.8
-extras = pep8
-
-commands = flake8 more/ setup.py
-           black --check more/ setup.py
+[testenv:pre-commit]
+deps = pre-commit
+commands = pre-commit run --all-files
 
 [testenv:coverage]
-basepython = python3.8
+basepython = python3
 extras = test
          coverage
 
 commands = pytest --cov more/static --cov-fail-under=100 {posargs}
 
+[gh-actions]
+python =
+    3.6: py36
+    3.7: py37
+    3.8: py38
+    3.9: py39, pre-commit, mypy, coverage
+
+[flake8]
+max-line-length = 88
+ignore =
+    E231  # clashes with black
+    W503
